--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "@babel/core": "^7.16.0",
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/lab": "^4.0.0-alpha.61",
     "@nabla-studio/chain-registry": "^0.15.0",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.3",
     "@quirks/react": "^0.13.8",
